--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 dj-database-url==3.0.1
 Django==6.0
 gunicorn==23.0.0
+idna==3.11
 packaging==25.0
 pdfkit==1.0.0
 psycopg2==2.9.11
 psycopg2-binary==2.9.11
 python-decouple==3.8
+requests==2.32.5
 sqlparse==0.5.5
 tzdata==2025.3
+urllib3==2.6.2
